Avoid guava conflicts in cassandra connector &Spark